--- a/utils/configs.json
+++ b/utils/configs.json
@@ -8,21 +8,21 @@
       "remove_non_ascii": true
     },
     "vae_configs": {
-        "continue_training": true,
+        "continue_training": false,
         "early_stopping": true,
         "epochs": 10,
         "hyperparameters": 
         {
             "batch_size": 512,
-            "embedding_dim": 128,
-            "latent_dim": 64,
-            "hidden_dim": 64,
+            "embedding_dim": 64,
+            "latent_dim": 128,
+            "hidden_dim": 128,
             "learning_rate": 0.001,
             "patience": 10
         }
     },
     "cls_configs": {
-        "epochs": 100,
+        "epochs": 10,
         "hyperparameters":
         {
             "batch_size": 512,
