--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,106 @@
-kagglehub
-pandas
-matplotlib
-seaborn
-scikit-learn
-wandb
-rich
+# pip freeze after run
+annotated-types==0.7.0
+asttokens==3.0.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+comm==0.2.3
+contourpy==1.3.2
+cuda-bindings==12.9.4
+cuda-pathfinder==1.2.2
+cycler==0.12.1
+debugpy==1.8.20
+decorator==5.2.1
+exceptiongroup==1.3.1
+executing==2.2.1
+filelock==3.20.0
+fonttools==4.61.1
+fsspec==2025.12.0
+gitdb==4.0.12
+GitPython==3.1.46
+idna==3.11
+ipykernel==7.2.0
+ipython==8.38.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.3
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+kagglehub==1.0.0
+kagglesdk==0.1.15
+kiwisolver==1.4.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mdurl==0.1.2
+mpmath==1.3.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.6.77
+packaging==26.0
+pandas==2.3.3
+parso==0.8.6
+pexpect==4.9.0
+pillow==12.1.1
+platformdirs==4.9.2
+prompt_toolkit==3.0.52
+protobuf==6.33.5
+psutil==7.2.2
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+requests==2.32.5
+rich==14.3.3
+scikit-learn==1.7.2
+scipy==1.15.3
+seaborn==0.13.2
+sentry-sdk==2.53.0
+six==1.17.0
+smmap==5.0.2
+stack-data==0.6.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.10.0+cu126
+torchvision==0.25.0+cu126
+tornado==6.5.4
+tqdm==4.67.3
+traitlets==5.14.3
+triton==3.6.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+wandb==0.25.0
+wcwidth==0.6.0
+
+# Defaults:
+# kagglehub
+# matplotlib
+# pandas
+# rich
+# seaborn
+# scikit-learn
+# wandb
