[UPDATE] added mac support

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
-.env
-.venv
-.cls_venv
-__pycache__/
+*.d
 *.pyc
+*.pyo
+*.pyd
+__pycache__/
+.Python
+*.pth
+*.pt
+*.ckpt
+.vscode/
+.idea/
+*.swp
+.ipynb_checkpoints
+.env
+env/
+.venv/
+venv/
+.cls_venv/
 wandb
 training_history/
 tests/
+
+# Mac OS
+.DS_Store
+.AppleDouble
+.LSOverride
